# fiberphotometry

./: .gitignore  AT__Video_velocity_analysis.ipynb  LICENSE  PCB_serotonin.ipynb  README.md  behavior.py  environment.yaml  fiberphotometry.code-workspace  fiberphotometry.py  pyproject.toml  rnascope.ipynb  setup.py
.old/: fiberphotometry_old.py
Anna/: behavior_analysis.py  behavior_plotting.py  core.py  immuno_analysis.py  immuno_plotting.py  rnascope_analysis.py  rnascope_plotting.py  serotonin_mobility_analysis.py  serotonin_mobility_plotting.py  serotonin_overlay_analysis.py  serotonin_overlay_plotting.py
Anna/anna_notebooks/: behavior_analysis.ipynb  rnascope.ipynb  (+2 more)
Shaharia/: Fiber_FreezeAnalysis_SignalAnalysis-Final3.ipynb  Fiber_FreezeAnalysis_SignalAnalysis-Final3.py  Fiber_FreezeAnalysis_SignalAnalysis-Final3_ALEX.ipynb  Fiber_FreezeAnalysis_SignalAnalysis_Individual.ipynb
fiber_photometry_analysis.egg-info/: PKG-INFO  SOURCES.txt
hardware/: README.md
notebooks/: COLAB_SuperAnimal_GT_fiber.ipynb  PCB_serotonin.ipynb  Plotting_photometry_traces.ipynb  behavior.ipynb  calcium_analysis.ipynb  calcium_analysis_v2.ipynb  photometry_example.ipynb  prototyper.ipynb  tester.ipynb  video_velocity_analysis.ipynb
scripts/: long_rec_data_extraction.py  readme.md
software/: readme.md
src/: FreezeAnalysis.py  TDT_experiment.py  __init__.py  behavior.py  behavior_dlc.py  behavior_m.py  dlc_processing_tools.py  fiberphotometry.py  logging_module.py  plotting.py  video.py
synape_routines/: README.md  fixed_lenght_recordings.py
tests/: tdt_experimetn.py
(+20 files in other folders)
