[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiber-photometry-analysis"
version = "0.1"
description = "some basic analysis code"
authors = [
  { name = "Gergely Turi", email = "gt2253@cumc.columbia.edu" },
  { name = "Alexander Hurowitz", email = "alexander.hurowitz@nyspi.columbia.edu" },
]
license = { text = "MIT" }
requires-python = ">=3.10.12"
dependencies = [
  "bokeh",
  "easygui",
  "holoviews",
  "ipykernel",
  "ipython",
  "jinja2",
  "jupyter",
  "matplotlib",
  "notebook",
  "numpy",
  "opencv-python",
  "pandas",
  "rich",
  "scikit-learn",
  "scipy",
  "tdt",
]

[project.urls]
Homepage = "https://github.com/GergelyTuri/fiberphotometry"

[tool.hatch.build.targets.wheel]
packages = ["src"]
